@@ -1,0 +1,4 @@
+Download and install R packages stored in 'GitHub', 'BitBucket', or
+plain 'subversion' or 'git' repositories. This package provides the
+'install_*' functions in 'devtools'. Indeed most of the code was
+copied over from 'devtools'.
